fix Android bug commit

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,4 +1,5 @@
 <p >Identifier: <code id="pkg"></code></p>
+<p >App can't executed in jail env? <input type="text" id="editedidentifier" class="form-group" placeholder="PackageName/Identifier(IOS)"> <button id="" class="btn btn-success " style="width: 90px;height: 32px;margin-bottom: 2px" onclick="selectApp('magicnum')">Select</button></p>
 <!-- <div>
     <input id="pkgnametext" type="text" class="form-control" placeholder="Identifier" style="width: 250px;display: inline-block">
     <button type="submit" id="pkgname" class="btn btn-success " style="width: 90px;height: 32px;margin-bottom: 2px">Confirm</button>
