--- a/src/templates/custom.html
+++ b/src/templates/custom.html
@@ -10,6 +10,7 @@
                     </div>
     <button type="button" data-toggle="modal" data-target="#ScriptManage" id="CustomScriptManage" onclick="getcustominfo();" class="btn btn-default btn-xs">ScriptManage</button>
     <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#SaveScript" >SaveScript</button>
+    <button type="button" data-toggle="modal" data-target="#SpawnLoadScript" class="btn btn-default btn-xs" >SpawnLoadScript</button>
 </div>
 
 <!-- Save Script Modal -->
@@ -69,6 +70,27 @@
 
         </div>
     </div>
+</div>
+
+<!-- Spwawn app -->
+<div class="modal fade" id="SpawnLoadScript" tabindex="-1" role="dialog" aria-labelledby="spawnModalLabel"  data-backdrop="static" data-keyboard="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">Load script by Spawn Mode</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you set identifier in home tab? if not set here:</p>
+                <input type="text" id="editedidentifier_cus" class="form-group" placeholder="PackageName/Identifier(IOS)">
+                <!-- <code id="deletefilename" style="word-wrap:break-word"></code> -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="loadCustomScript('spawn')">Set Already</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="loadCustomScript('spawn')">Confirm</button>
+            </div>
+        </div>
+  </div>
 </div>
 
 <!-- delete file -->
