--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -12,9 +12,9 @@
                     </ul>
 
                      <form class="navbar-form navbar-left" role="search">
-                        <button type="button" onclick="refreshPid();" class="btn btn-default" data-toggle="tooltip" title="刷新进程信息">
+                        <button type="button" onclick="refreshPid();" class="btn btn-default" data-toggle="tooltip" title="Refresh PID">
                             <i class="glyphicon glyphicon-refresh" aria-hidden="true"></i>
-                            刷新进程信息
+                            Refresh PID
                         </button>
                         <!-- <button type="button" onclick="screenshot();" class="btn btn-default" data-toggle="tooltip" title="Screenshot">
                             <i class="glyphicon glyphicon-camera" aria-hidden="true"></i>
@@ -23,7 +23,7 @@
                         <button type="button" class="btn btn-default" data-toggle="modal" data-target="#settings" data-toggle="tooltip" title="Settings">
                             <i class="glyphicon glyphicon-wrench" aria-hidden="true"></i>
                         </button> -->
-                        <button type="button" onclick="detachall()" class="btn btn-default navbar-btn" title="Detach All"><i class="glyphicon glyphicon-remove" aria-hidden="true"></i>upload脚本</button>
+                        <button type="button" onclick="detachall()" class="btn btn-default navbar-btn" title="Detach All"><i class="glyphicon glyphicon-remove" aria-hidden="true"></i>Unload Scripts</button>
                     </form>
                 </div>
             </div>
