--- a/src/templates/toBurp.html
+++ b/src/templates/toBurp.html
@@ -35,7 +35,7 @@
         <br/><br/>
         <input id="d9" type="text" class="form-control" placeholder="Method index" style="width:200px;float:left"><input id="d10" type="text" class="form-control" placeholder="Args intercepted index" style="width:200px;float:left"><input id="d11" type="text" class="form-control" placeholder="Intercept mode(0、1、2、3、4)" style="width:250px;float:left"><input id="d12" type="text" class="form-control" placeholder="Keyword(optional)" style="width:300px;float:left">
         <br/><br/>
-        <button type="button" onclick="addToBurpInfo()">Add/Update Hook Info(iOSOnly)</button>
+        <button type="button" onclick="addToBurpInfo()">Add/Update Hook Info</button>
         <button type="button" onclick="deleteToBurpInfo()">Delete Hook Info</button>
         <!-- <button type="button" onclick="UnloadToBurpScript()">Unload ToBurpScript</button> -->
         <p style="color: #337ab7;margin: 5px 0px;"> Output Console <span class="glyphicon glyphicon-remove clickable" aria-hidden="true" onclick="clear_doburp_hookMessage()"  ></span></p>
