--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -28,11 +28,11 @@
                 </div>
             </div>
         
-            <ul class="nav navbar-nav navbar-right">
+            <!-- <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" onclick="download_apk()" class="dropdown-toggle downloadapp" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Download App </a>
                 </li>
-            </ul>
+            </ul> -->
             <!--
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
