--- a/src/templates/toBurp.html
+++ b/src/templates/toBurp.html
@@ -20,23 +20,39 @@
         </div>
     </div>
 </div>
-<!-- <style type="text/css">
-    .col-sm-12 .form-control{
-     width:100px;
-     float: left;
-    }
-</style> -->
+<div >
+    <input id="d1" type="text" list="methodindex" placeholder="Method index" style="padding: 0.1em;float:left;width:115px"><input id="d2" type="text" list="argumentsindex" placeholder="Intercepted args index" style="padding: 0.1em;float:left;width:165px;margin-left:10px"><input id="d3" type="text" placeholder="Select mode" list="modelist"  style="padding: 0.1em;float:left;width:115px;margin-left:10px"><input id="d4" type="text" class="text-nowrap" placeholder="Keyword(optional)" style="float:left;margin-left:10px">
+    <br/><br/>
+    <input id="d5" type="text" list="methodindex" placeholder="Method index" style="padding: 0.1em;float:left;width:115px"><input id="d6" type="text" list="argumentsindex" placeholder="Intercepted args index" style="padding: 0.1em;float:left;width:165px;margin-left:10px"><input id="d7" type="text" placeholder="Select mode" list="modelist" style="padding: 0.1em;float:left;width:115px;margin-left:10px"><input id="d8" type="text" class="text-nowrap" placeholder="Keyword(optional)" style="float:left;margin-left:10px">
+    <br/><br/>
+    <input id="d9" type="text" list="methodindex" placeholder="Method index" style="padding: 0.1em;float:left;width:115px"><input id="d10" type="text" list="argumentsindex" placeholder="Intercepted args index" style="padding: 0.1em;float:left;width:165px;margin-left:10px"><input id="d11" type="text" placeholder="Select mode" list="modelist" style="padding: 0.1em;float:left;width:115px;margin-left:10px"><input id="d12" type="text" class="text-nowrap" placeholder="Keyword(optional)" style="float:left;margin-left:10px">
+    <br/><br/>
+</div>
+<datalist id="modelist">
+    <option>0</option>
+    <option>1</option>
+    <option>2</option>
+    <option>3</option>
+    <option>4</option>
+</datalist>
+<datalist id="methodindex">
+    <option>1</option>
+    <option>2</option>
+    <option>3</option>
+    <option>4</option>
+</datalist>
+<datalist id="argumentsindex">
+    <option>0</option>
+    <option>1</option>
+    <option>2</option>
+    <option>3</option>
+    <option>4</option>
+</datalist>
+<button type="button" onclick="addToBurpInfo()">Add/Update Hook Info</button>
+<button type="button" onclick="deleteToBurpInfo()">Delete Hook Info</button>
 <div class="row">
     <div class="col-sm-12">
-
-        <input id="d1" type="text" class="form-control" placeholder="Method index" style="width:200px;float:left"><input id="d2" type="text" class="form-control" placeholder="Args intercepted index" style="width:200px;float:left"><input id="d3" type="text" class="form-control" placeholder="Intercept mode(0、1、2、3、4)" style="width:250px;float:left"><input id="d4" type="text" class="form-control" placeholder="Keyword(optional)" style="width:300px;float:left">
-        <br/><br/>
-        <input id="d5" type="text" class="form-control" placeholder="Method index" style="width:200px;float:left"><input id="d6" type="text" class="form-control" placeholder="Args intercepted index" style="width:200px;float:left"><input id="d7" type="text" class="form-control" placeholder="Intercept mode(0、1、2、3、4)" style="width:250px;float:left"><input id="d8" type="text" class="form-control" placeholder="Keyword(optional)" style="width:300px;float:left">
-        <br/><br/>
-        <input id="d9" type="text" class="form-control" placeholder="Method index" style="width:200px;float:left"><input id="d10" type="text" class="form-control" placeholder="Args intercepted index" style="width:200px;float:left"><input id="d11" type="text" class="form-control" placeholder="Intercept mode(0、1、2、3、4)" style="width:250px;float:left"><input id="d12" type="text" class="form-control" placeholder="Keyword(optional)" style="width:300px;float:left">
-        <br/><br/>
-        <button type="button" onclick="addToBurpInfo()">Add/Update Hook Info</button>
-        <button type="button" onclick="deleteToBurpInfo()">Delete Hook Info</button>
+        
         <!-- <button type="button" onclick="UnloadToBurpScript()">Unload ToBurpScript</button> -->
         <p style="color: #337ab7;margin: 5px 0px;"> Output Console <span class="glyphicon glyphicon-remove clickable" aria-hidden="true" onclick="clear_doburp_hookMessage()"  ></span></p>
         <div class="table-responsive pre-scrollable" style="min-height: 500px;">
