--- a/src/templates/hook.html
+++ b/src/templates/hook.html
@@ -27,9 +27,9 @@
     <table class="table table-striped table-bordered" style="table-layout:fixed;word-break:break-all;">
        <thead>
            <tr>
-             <th style="width: 20%">MethodName</th>
-             <th style="width: 60%">Args Dump</th>
-             <th style="width: 20%">Return Value</th>
+             <th style="width: 20%">Method name</th>
+             <th style="width: 60%">Args</th>
+             <th style="width: 20%">Return value</th>
            </tr>
        </thead>
        <tbody id="outputBody"></tbody>
