--- a/src/templates/stack.html
+++ b/src/templates/stack.html
@@ -5,7 +5,7 @@
 
        <thead>
            <tr>
-             <th style="width: 30%">MethodName</th>
+             <th style="width: 30%">Method name</th>
              <th style="width: 70%">Stack</th>
            </tr>
        </thead>
