--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,9 +9,9 @@
        <thead>
            <tr>
              <th style="width: 25%">Identifier</th>
-             <th style="width: 10%" >ApplicationName</th>
+             <th style="width: 10%" >Application name</th>
              <th style="width: 5%" >Pid</th>
-             <th style="width: 5%" >Select</th>
+             <th style="width: 5%" >Action</th>
            </tr>
        </thead>
        <tbody id="outputappname"></tbody>
