--- a/src/templates/toBurp.html
+++ b/src/templates/toBurp.html
@@ -30,6 +30,8 @@
 </div>
 <datalist id="modelist">
     <option>0</option>
+    <option>1</option>
+    <option>2</option>
 </datalist>
 <datalist id="methodindex">
     <option>1</option>
