--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
         <div class="root">
             <ul class="nav nav-tabs ">
 
-                <li class="active"><a data-toggle="tab" href="#home" ><i class="glyphicon glyphicon-home" style="color: #337ab7"></i>  Home</a></li>
+                <li class="active"><a data-toggle="tab" href="#home" ><i class="glyphicon glyphicon-home" style="color: #337ab7"></i>  Proc</a></li>
                 <li><a data-toggle="tab" href="#hook" ><i class="glyphicon glyphicon-th-large" style="color: #337ab7"></i> Hooks</a></li>
                 <li><a data-toggle="tab" href="#stack"><i class="glyphicon glyphicon-oil" style="color: #337ab7"></i> Stack</a></li>
                 <li><a data-toggle="tab" href="#find"><i class="glyphicon glyphicon-search" style="color: #337ab7"></i> Finds</a></li>
