--- a/src/templates/custom.html
+++ b/src/templates/custom.html
@@ -1,6 +1,6 @@
 <p id="toggle_custom_info" class="text-primary" style="cursor: pointer; margin-bottom: 3px;display: inline-block;">Custom <i class="glyphicon glyphicon-resize-small"></i></p>&nbsp;&nbsp;
 <div class="btn-group" role="group" aria-label="...">
-    <button type="button" onclick="loadCustomScript('normal')" class="btn btn-default btn-xs " aria-haspopup="true" aria-expanded="false">loadScript </button>
+    <button type="button" onclick="loadCustomScript('normal')" class="btn btn-default btn-xs " aria-haspopup="true" aria-expanded="false">LoadScript </button>
                 <!-- <div class="btn-group" role="group">
                         <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 loadScript <span class="caret"></span></button>
