--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,9 +36,9 @@
             <ul class="nav nav-tabs ">
 
                 <li class="active"><a data-toggle="tab" href="#home" ><i class="glyphicon glyphicon-home" style="color: #337ab7"></i>  Proc</a></li>
-                <li><a data-toggle="tab" href="#hook" ><i class="glyphicon glyphicon-th-large" style="color: #337ab7"></i> Hooks</a></li>
+                <li><a data-toggle="tab" href="#hook" ><i class="glyphicon glyphicon-th-large" style="color: #337ab7"></i> Hook</a></li>
                 <li><a data-toggle="tab" href="#stack"><i class="glyphicon glyphicon-oil" style="color: #337ab7"></i> Stack</a></li>
-                <li><a data-toggle="tab" href="#find"><i class="glyphicon glyphicon-search" style="color: #337ab7"></i> Finds</a></li>
+                <li><a data-toggle="tab" href="#find"><i class="glyphicon glyphicon-search" style="color: #337ab7"></i> Find</a></li>
                 <li><a data-toggle="tab" href="#uidump"><i class="glyphicon glyphicon-eye-open" style="color: #337ab7"></i> UIDump</a></li>
                 <li><a data-toggle="tab" href="#toBurp"><i class="glyphicon glyphicon-th" style="color: #337ab7"></i> toBurp</a></li>
                 <li><a data-toggle="tab" href="#Custom"><i class="glyphicon glyphicon-user" style="color: #337ab7"></i> Custom</a></li>
